--- a/docker/nginx/docs.conf
+++ b/docker/nginx/docs.conf
@@ -30,7 +30,7 @@ server {
   listen 443 ssl;
   http2 on;
   # The host name to respond to
-  server_name beta.tuyaopen.io;
+  server_name docs.tuyaopen.io;
 
   include h5bp/tls/ssl_engine.conf;
   #include h5bp/tls/certificate_files.conf;
@@ -47,8 +47,48 @@ server {
   # Include the basic h5bp config set
   include h5bp/basic.conf;
 
-  location / {
-    proxy_pass http://tuyaopen.io:9010;
-    proxy_set_header X-Forwarded-For $remote_addr;
+  location /webhook/ {
+        proxy_pass http://127.0.0.1:9000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  location /zh/master {
+        alias /usr/share/nginx/html/zh/master;  # 替换为你的静态文件目>录
+        try_files $uri $uri/ =404;
+        expires 1d;  # 可选：缓存静态文件
+  }
+
+  location /zh/release {
+        alias /usr/share/nginx/html/zh/release;  # 替换为你的静态文件目>录
+        try_files $uri $uri/ =404;
+        expires 1d;  # 可选：缓存静态文件
+  }
+
+  location = /zh {
+       return 301 $scheme://$host/zh/master;
+  }
+
+
+  location /en/master {
+        alias /usr/share/nginx/html/en/master;  # 替换为你的静态文件目>录
+        try_files $uri $uri/ =404;
+        expires 1d;  # 可选：缓存静态文件
+  }
+
+  location = /en {
+        return 301 $scheme://$host/en/master;
+  }
+
+  location /en/release {
+        alias /usr/share/nginx/html/en/release;
+        try_files $uri $uri/ =404;
+        expires 1d;
+  }
+
+  location = / {
+        return 301 $scheme://$host/en/master;
   }
 }
