--- a/docker/nginx/tuyaopen.io.conf
+++ b/docker/nginx/tuyaopen.io.conf
@@ -22,7 +22,6 @@
 #  return 301 $scheme://example.com$request_uri;
 #}
 
-
 server {
   # listen [::]:443 ssl http2 accept_filter=dataready;  # for FreeBSD
   # listen 443 ssl http2 accept_filter=dataready;  # for FreeBSD
@@ -30,7 +29,7 @@ server {
   listen 443 ssl;
   http2 on;
   # The host name to respond to
-  server_name prod.tuyaopen.io;
+  server_name tuyaopen.io;
 
   include h5bp/tls/ssl_engine.conf;
   #include h5bp/tls/certificate_files.conf;
@@ -48,7 +47,12 @@ server {
   include h5bp/basic.conf;
 
   location / {
-    proxy_pass http://tuyaopen.io:9001;
-    proxy_set_header X-Forwarded-For $remote_addr;
+    proxy_pass http://127.0.0.1:9050;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Forwarded-Port $server_port;
   }
 }
