--- a/docker/nginx/tuyaopen.io.conf
+++ b/docker/nginx/tuyaopen.io.conf
@@ -1,58 +1,12 @@
-# ----------------------------------------------------------------------
-# | Config file for example.com host                                   |
-# ----------------------------------------------------------------------
-#
-# This file is a template for an Nginx server.
-# This Nginx server listens for the `example.com` host and handles requests.
-# Replace `example.com` with your hostname before enabling.
-
-# Choose between www and non-www, listen on the wrong one and redirect to
-# the right one.
-# https://www.nginx.com/resources/wiki/start/topics/tutorials/config_pitfalls/#server-name-if
-#server {
-#  listen [::]:443 ssl http2;
-#  listen 443 ssl http2;
-
-#  server_name www.example.com;
-
-#  include h5bp/tls/ssl_engine.conf;
-#  include h5bp/tls/certificate_files.conf;
-#  include h5bp/tls/policy_balanced.conf;
-
-#  return 301 $scheme://example.com$request_uri;
-#}
+# re-routed from tuyaopen.io into tuyaopen.ai attach all requesting uri
 
 server {
-  # listen [::]:443 ssl http2 accept_filter=dataready;  # for FreeBSD
-  # listen 443 ssl http2 accept_filter=dataready;  # for FreeBSD
-  listen [::]:443 ssl ;
-  listen 443 ssl;
-  http2 on;
-  # The host name to respond to
-  server_name tuyaopen.io;
+    listen [::]:443 ssl;
+    listen 443 ssl;
+    server_name tuyaopen.io;
 
-  include h5bp/tls/ssl_engine.conf;
-  #include h5bp/tls/certificate_files.conf;
-  ssl_certificate /etc/nginx/certs/tuyaopen.io.crt;
-  ssl_certificate_key /etc/nginx/certs/tuyaopen.io.key;
-  include h5bp/tls/policy_balanced.conf;
+    ssl_certificate /etc/nginx/certs/tuyaopen.io.crt;
+    ssl_certificate_key /etc/nginx/certs/tuyaopen.io.key;
 
-  # Path for static files
-  #root /usr/share/nginx/html;
-
-  # Custom error pages
-  include h5bp/errors/custom_errors.conf;
-
-  # Include the basic h5bp config set
-  include h5bp/basic.conf;
-
-  location / {
-    proxy_pass http://127.0.0.1:9050;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-Host $host;
-    proxy_set_header X-Forwarded-Port $server_port;
-  }
+    return 301 https://tuyaopen.ai$request_uri;
 }
