--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@docsearch/react": "^3.9.0",
     "@docusaurus/core": "3.7.0",
     "@docusaurus/preset-classic": "3.7.0",
     "@docusaurus/theme-search-algolia": "^3.8.1",
