--- a/docker/nginx/tuyaopen.ai.conf
+++ b/docker/nginx/tuyaopen.ai.conf
@@ -1,43 +1,65 @@
+map $http_accept_language $target_lang {
+    default 'en';  # Default to English
+    ~*zh.*$ 'zh';  # Match any Chinese locale (zh-CN, zh-TW, etc.)
+    ~*en.*$ 'en';  # Explicitly match English locales
+}
+
 server {
-  # listen [::]:443 ssl http2 accept_filter=dataready;  # for FreeBSD
-  # listen 443 ssl http2 accept_filter=dataready;  # for FreeBSD
-  listen [::]:443 ssl ;
-  listen 443 ssl;
-  http2 on;
-  # The host name to respond to
-  server_name www.tuyaopen.ai docs.tuyaopen.ai;
+    # listen [::]:443 ssl http2 accept_filter=dataready;  # for FreeBSD
+    # listen 443 ssl http2 accept_filter=dataready;  # for FreeBSD
+    listen [::]:443 ssl ;
+    listen 443 ssl;
+    http2 on;
 
-  include h5bp/tls/ssl_engine.conf;
-  #include h5bp/tls/certificate_files.conf;
-  ssl_certificate /etc/nginx/certs/_tuyaopen_ai.crt;
-  ssl_certificate_key /etc/nginx/certs/_tuyaopen_ai.key;
-  include h5bp/tls/policy_balanced.conf;
+    # The host names to respond to
+    server_name tuyaopen.ai www.tuyaopen.ai docs.tuyaopen.ai;
 
-  # Path for static files
-  #root /usr/share/nginx/html;
+    include h5bp/tls/ssl_engine.conf;
+    #include h5bp/tls/certificate_files.conf;
+    ssl_certificate /etc/nginx/certs/_tuyaopen_ai.crt;
+    ssl_certificate_key /etc/nginx/certs/_tuyaopen_ai.key;
+    include h5bp/tls/policy_balanced.conf;
 
-  # Custom error pages
-  include h5bp/errors/custom_errors.conf;
+    # Custom error pages
+    include h5bp/errors/custom_errors.conf;
 
-  # Include the basic h5bp config set
-  include h5bp/basic.conf;
+    # Include the basic h5bp config set
+    include h5bp/basic.conf;
 
-  location /webhook/ {
-        proxy_pass http://127.0.0.1:9000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-  }
- 
-  location / {
-    proxy_pass http://127.0.0.1:9050;
+    # Common proxy headers for all proxy locations
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-Host $host;
     proxy_set_header X-Forwarded-Port $server_port;
-  }
+
+    location /webhook/ {
+        proxy_pass http://127.0.0.1:9000/;
+    }
+
+    location / {
+        # Proper syntax for combining two conditions with AND logic
+        if ($request_uri = /) {
+            set $redirect_zh 1;
+        }
+        if ($target_lang = zh) {
+            set $redirect_zh "${redirect_zh}1";
+        }
+        if ($redirect_zh = "11") {
+            return 302 /zh/;
+        }
+
+        # Proxy all requests to your Docsaurus server
+        proxy_pass http://127.0.0.1:9050;
+    }
 }
 
+# Optional: Add HTTP to HTTPS redirection
+server {
+    listen 80;
+    listen [::]:80;
+    server_name tuyaopen.ai www.tuyaopen.ai docs.tuyaopen.ai;
+
+    return 301 https://$host$request_uri;
+}
