fix: add tags defs to blog posts

--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -2,3 +2,13 @@ release:
   label: Release
   permalink: /release
   description: TuyaOpen SDK Releases tag description
+
+TuyaOpen:
+  label: TuyaOpen
+  permalink: /TuyaOpen
+  description: TuyaOpen platform and development related content
+
+Contest:
+  label: Contest
+  permalink: /Contest
+  description: Developer contests and hackathons
